# rust_crypto_mm

./: .gitignore  CLAUDE.md  Cargo.toml  commands.txt
config/: gate_mvp.yaml
docs/: fair_value_learnings.md  gate_execution_tasks.md  gate_mvp_overview.md  gate_testing_plan.md  next_prompt.md
logs/: gate_activity copy.csv  gate_activity.csv  gate_activity_local2.csv
scripts/: evaluate_fair_value.py  plot_mid.py  plot_mid_levels.py  plot_mid_with_quotes.py
src/: lib.rs  main.rs
src/base_classes/: bbo.rs  bbo_store.rs  demean.rs  engine.rs  feed_gate.rs  mod.rs  order_book.rs  orderbook_trait.rs  reference.rs  reference_publisher.rs  ring_buffer.rs  state.rs  tickers.rs  trades.rs  types.rs  ws.rs
src/bin_utils/: symbol_config.rs
src/collectors/: binance.rs  bitget.rs  bybit.rs  gate.rs  helpers.rs  mod.rs
src/config/: mod.rs  runner.rs
src/exchanges/: README.md  binance.rs  binance_book.rs  binance_parsed.rs  bitget.rs  bitget_book.rs  bybit.rs  bybit_book.rs  endpoints.rs  gate.rs  gate_book.rs  gate_rest.rs  mod.rs
src/exchanges/binance/: mod.rs  orderbook.rs  parser.rs  rest.rs
src/exchanges/bitget/: mod.rs  orderbook.rs  parser.rs
src/exchanges/bybit/: mod.rs  orderbook.rs
src/exchanges/gate/: mod.rs  orderbook.rs  parser.rs  rest.rs  signing.rs
src/execution/: dry_run.rs  gate_client.rs  gate_ws.rs  gateway.rs  inventory.rs  mod.rs  order_manager.rs  types.rs
src/logging/: debug_logger.rs  mod.rs  quote.rs  quote_block.rs  quote_raw.rs
src/strategy/: mod.rs  simple_quote.rs
src/utils/: math.rs  mod.rs  parsing.rs  time.rs
